    a new fancy output iterator which transform output before storing result the memory

Other Enhancements
    If C++11 support is enabled, functors do not have to inherit from thrust::unary_function/thrust::binary_function 
    anymore when using them with thrust::transform_iterator.
    The performance of thrust::unique* is improved.

Bug Fixes
    TODO

Known Issues
    TODO

Acknowledgments
    Thanks to Manuel Schiller for contributing a C++11 based enhancement regarding the deduction of 
    functor return types, improving the performance of thrust::unique and implementing transform_output_iterator

#######################################
#           Thrust v1.8.3             #
#######################################

Summary
    Small bug fixes

New Examples
    range_view demonstrates use of a view: a non-owning wrapper for an iterator range with a container-like interface

Bug Fixes
    copy_if now copies in a user provided stream instead of a default_stream
    {min,max,minmax}_element can now accept raw device pointer with device execution policy

Known Issues
    TODO

#######################################
#           Thrust v1.8.2             #
#######################################

Summary
    Small bug fixes

Bug Fixes
    Avoid warnings and errors concerning user functions called from __host__ __device__ functions
    #632 CUDA set_intersection_by_key error
    #651 thrust::copy between host & device is not interoperable with thrust::cuda::par.on(stream)
    #664 CUDA for_each ignores execution policy's stream

Known Issues
    #628 CUDA's reduce_by_key fails on sm_50 devices

#######################################
#           Thrust v1.8.1             #
#######################################

Summary
    Small bug fixes

Bug Fixes
    #615 CUDA for_each accesses illegal memory locations when given a large range
    #620 CUDA's reduce_by_key fails on large input

Known Issues
    #628 CUDA's reduce_by_key fails on sm_50 devices
