@@ -102,7 +102,6 @@ template<typename T, typename Alloc>
       vector_base<T,Alloc>
         ::operator=(vector_base &&v)
   {
-    assert(this != &v);
     vector_base tmp;
     swap(tmp);
     swap(v);
