@@ -19,6 +19,8 @@
 #include <thrust/detail/config.h>
 #include <thrust/system/tbb/vector.h>
 
+#include <utility>
+
 namespace thrust
 {
 namespace system
@@ -48,7 +50,15 @@ template<typename T, typename Allocator>
   vector<T,Allocator>
     ::vector(const vector &x)
       : super_t(x)
-{}
+  {}
+
+#if __cplusplus >= 201103L
+  template<typename T, typename Allocator>
+    vector<T,Allocator>
+      ::vector(vector &&x)
+        : super_t(std::forward<super_t>(x))
+  {}
+#endif
 
 template<typename T, typename Allocator>
   template<typename OtherT, typename OtherAllocator>
@@ -71,6 +81,17 @@ template<typename T, typename Allocator>
         : super_t(first,last)
 {}
 
+#if __cplusplus >= 201103L
+  template<typename T, typename Allocator>
+    vector<T,Allocator> &
+      vector<T,Allocator>
+        ::operator=(vector &&x)
+  {
+    super_t::operator=(std::forward<super_t>(x));
+    return *this;
+  }
+#endif
+
 template<typename T, typename Allocator>
   template<typename OtherT, typename OtherAllocator>
     vector<T,Allocator> &
@@ -90,7 +111,7 @@ template<typename T, typename Allocator>
   super_t::operator=(x);
   return *this;
 }
-      
+    
 } // end tbb
 } // end system
 } // end thrust
