@@ -20,6 +20,8 @@ Other Enhancements
     If C++11 support is enabled, functors do not have to inherit from thrust::unary_function/thrust::binary_function 
     anymore when using them with thrust::transform_iterator.
     The performance of thrust::unique* is improved.
+    If C++11 support is enabled, the move constructor and move assignment operator have been implemented
+    for host_vector,device_vector,cuda::vector,omp::vector and tbb::vector.
 
 Bug Fixes
     TODO
@@ -30,6 +32,7 @@ Known Issues
 Acknowledgments
     Thanks to Manuel Schiller for contributing a C++11 based enhancement regarding the deduction of 
     functor return types, improving the performance of thrust::unique and implementing transform_output_iterator
+    Thanks to Thibault Notargiacomo for the implementation of move semantics for the vector_base based class.
 
 #######################################
 #           Thrust v1.8.3             #
